# Arcanoid

./: .gitignore  CMakeLists.txt  README.md  ~$адание.docx  Задание.docx  План.txt
Arcanoid/: Arcanoid.sln  CMakeLists.txt
Arcanoid/Arcanoid/: ActiveBonuses.cpp  ActiveBonuses.h  Arcanoid.vcxproj  Arcanoid.vcxproj.filters  Ball.cpp  Ball.h  Bar.cpp  Bar.h  Bonus.cpp  Bonus.h  BottomReflectionBonus.cpp  BottomReflectionBonus.h  Brick.cpp  Brick.h  ChangeBallSpeedBonus.cpp  ChangeBallSpeedBonus.h  ChangeBarSizeBonus.cpp  ChangeBarSizeBonus.h  Field.cpp  Field.h  GameLoop.cpp  GameLoop.h  GameLoopStart.cpp  Main.cpp  Main.h  MovingBrick.cpp  MovingBrick.h  MovingBrickBonus.cpp  MovingBrickBonus.h  RandomDirectionBonus.cpp  RandomDirectionBonus.h  Reflections.cpp  SpeedingBrick.cpp  SpeedingBrick.h  StickyBarBonus.cpp  StickyBarBonus.h  UnbreakableBrick.cpp  UnbreakableBrick.h
Arcanoid/Arcanoid/Debug/: vc142.idb
Arcanoid/Arcanoid/Debug/Arcanoid.tlog/: Arcanoid.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Arcanoid/Arcanoid/x64/Debug/: vc142.idb
Arcanoid/Arcanoid/x64/Debug/Arcanoid.tlog/: Arcanoid.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Arcanoid/Arcanoid/x64/Release/Arcanoid.tlog/: Arcanoid.lastbuildstate  Arcanoid.write.1u.tlog  CL.command.1.tlog  (+5 more)
Arcanoid/include/: BonusBrick.h  MovingBrick.h  MovingBrickBonus.h
Arcanoid/src/: Ball.cpp  GameLoop.cpp  Main.cpp  MovingBrickBonus.cpp  UnbreakableBrick.cpp
Arcanoid/x64/Release/: Arcanoid.iobj  Arcanoid.ipdb
(+11 files in other folders)
